be/.config/packages/prometheus/operator-crds/prometheus-monitoring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: default
spec:
  selector: 
    app: prometheus
  type: LoadBalancer  
  ports:
    - port: 9090
      targetPort: 9090
