be/.config/packages/prometheus/operator-crds/prometheus-monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus-monitoring
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus-operated.default.charity-project.eu
    http:
      paths:
      - backend:
          service:
            name: prometheus-operated
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
